--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "gatsby": "^4.3.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-scroll-parallax": "^3.0.0-alpha.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
