--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "react-scroll-parallax": "^3.0.0-alpha.15"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.0",
     "gatsby-plugin-postcss": "^5.3.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-remark": "^5.4.0",
     "postcss": "^8.4.4",
     "prettier": "^2.4.1",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^3.0.7"
   },
   "repository": {
     "type": "git",
